fix(tou): animation in dark mode

--- a/src/modules/auth/AcceptToUForm.module.scss
+++ b/src/modules/auth/AcceptToUForm.module.scss
@@ -72,4 +72,7 @@
   position: absolute;
   inset: 0;
   pointer-events: none;
+  path[fill='rgb(0,0,0)'] {
+    fill: currentColor;
+  }
 }
